fixed overflow on home

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -99,7 +99,7 @@ a {
 h1 {
   font-family: var(--font-base);
   color: #1a4e8a;
-  font-size: 7em;
+  font-size: 7rem;
 }
 h2 {
   font-family: var(--font-base);
